# Smarter-Reversi

./: CMakeLists.txt  README.md  README.txt  REVERSI.cpp  REVERSI.h  SDLC.cpp  SDLC.h  main.cpp
include/: REVERSI.h  SDLC.h
src/: REVERSI.cpp  SDLC.cpp  main.cpp
